:sparkles: Fixed Carousel Responsiveness

--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
             <h1 class="mx-3 mx-lg-5 mt-5 hero-text-box-header">
                 Create completely trustable <br> academic claims & credentials <br> with our blockchain solution
             </h1>
-            <p class="mx-3 mx-lg-5 hero-text-box-para">It’s time to move your paper-based credentials digital. Whether you’re <br>
+            <p class="mx-3 mx-lg-5 hero-text-box-para">It’s time to move your paper-based credentials digital. Whether
+                you’re <br>
                 issuing, verifying or presenting a credential, with StackEd, you know <br> it’s going to be
                 100% unhackable, trustable and accessible.</p>
         </div>
@@ -175,7 +176,8 @@
                     </div>
                     <div class="row how-para-main">
                         <p class="how-para px-5">
-                            The issuer is an entity or organisation that issues credentials or other form of claims to individuals.
+                            The issuer is an entity or organisation that issues credentials or other form of claims to
+                            individuals.
                         </p>
                         <p class="how-para-1 px-5">Example of issuers:</p>
                     </div>
@@ -205,7 +207,10 @@
 
             <div class="sign-para-div">
                 <p class="imagine-para mx-4 mx-lg-0">
-                    The following scenario: A student: Lily, is applying for university, with traditional processes, the university can either choose to believe Lily’s claim/paper graduation certificate or they can contact the school to verify. The Stacked upgrade illustrated below improves trust, privacy and efficiency for this process.
+                    The following scenario: A student: Lily, is applying for university, with traditional processes, the
+                    university can either choose to believe Lily’s claim/paper graduation certificate or they can
+                    contact the school to verify. The Stacked upgrade illustrated below improves trust, privacy and
+                    efficiency for this process.
                 </p>
             </div>
 
@@ -270,7 +275,7 @@
                     registration process</p>
             </div>
             <div class="row">
-                <div class="col-1 carousel-side-btn-holder">
+                <div class="col-1 carousel-side-btn-holder left-side">
                     <svg id="side-btn-left" class="carousel-side-btn" width="50" height="50" viewBox="0 0 40 40"
                         fill="none" xmlns="http://www.w3.org/2000/svg">
                         <circle cx="20" cy="20" r="20" transform="rotate(-180 20 20)" fill="#39A2DB" />
@@ -328,7 +333,7 @@
 
                     </div>
                 </div>
-                <div class="col-1 carousel-side-btn-holder">
+                <div class="col-1 carousel-side-btn-holder right-side">
                     <svg id="side-btn-right" class="carousel-side-btn" width="50" height="50" viewBox="0 0 40 40"
                         fill="none" xmlns="http://www.w3.org/2000/svg">
                         <circle cx="20" cy="20" r="20" fill="#39A2DB" />
