--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link rel="apple-touch-icon" sizes="180x180" href="images/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicons/favicon-16x16.png">
+    <link rel="manifest" href="images/favicons/site.webmanifest">
+    <link rel="mask-icon" href="images/favicons/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
         integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 
@@ -22,7 +30,10 @@
     <header>
         <div class="wrapper">
             <nav class="navbar">
-                <h5 class="logo" id="logo-id">StackEd</h5>
+                <div class="d-flex align-items-center">
+                    <img class="mr-3" src="images/logo.svg" alt="StackEd">
+                    <span class="logo" id="logo-id">StackEd</span>
+                </div>
                 <ul class="main-nav" id="navi-list">
                     <li><a href="#about">About</a></li>
                     <li><a href="#sign-up">Sign Up</a></li>
@@ -40,9 +51,9 @@
                 Create completely trustable <br> academic claims & credentials <br> with our blockchain solution
             </h1>
             <p class="mx-3 mx-lg-5 hero-text-box-para">It’s time to move your paper-based credentials digital. Whether
-                you’re <br>
-                issuing, verifying or presenting a credential, with StackEd, you know <br> it’s going to be
-                100% unhackable, trustable and accessible.</p>
+                you’re <br> issuing, verifying or presenting a credential, with StackEd, you know <br> it’s going to be
+                secure,
+                trustable and accessible.</p>
         </div>
 
         <div class="row mt-5">
