:sparkles: Updated Footer Links

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 
     <!-------------------------- Imagine Section ----------------------------------->
 
-    <section class="imagine">
+    <section id="example-use-case" class="imagine">
 
         <div class="container">
             <div class="text-center">
@@ -378,9 +378,9 @@
             </div>
             <div class="footer-right">
                 <ul class="footer-list">
-                    <li>Sign up</li>
-                    <li>The trust triangle</li>
-                    <li>Example use case</li>
+                    <li><a class="footer-link" href="#sign-up">Sign Up</a></li>
+                    <li><a class="footer-link" href="#about">The Trust Triangle</a></li>
+                    <li><a class="footer-link" href="#example-use-case">Example use case</a></li>
                 </ul>
             </div>
         </div>
@@ -394,8 +394,8 @@
             </div>
             <div class="footer-right-last">
                 <ul class="footer-last-list-2">
-                    <li class="footer-last-pad-1">Privacy Policy</li>
-                    <li class="footer-last-pad-2">Terms & Conditions</li>
+                    <!-- <li class="footer-last-pad-1">Privacy Policy</li> -->
+                    <!-- <li class="footer-last-pad-2">Terms & Conditions</li> -->
                 </ul>
             </div>
         </div>
